societies logo added

--- a/assets/css/templatemo-scholar.css
+++ b/assets/css/templatemo-scholar.css
@@ -831,7 +831,7 @@ Services Style
   display: inline-block;
   text-align: center;
   line-height: 190px;
-  background-color: #0c9fb6;
+  background-color: #ffffff;
   border-radius: 50%;
   position: absolute;
   right: 0;
