--- a/assets/css/templatemo-scholar.css
+++ b/assets/css/templatemo-scholar.css
@@ -145,6 +145,35 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.contact-map{
+  width:100%;
+  height:500px;
+}
+.map{
+  width:70%;
+  float:left;
+  margin-left:15px
+}
+.contact{
+  width:30%;
+  float:right;
+  margin-top: -478px;
+}
+.con-box{
+  height: 500px;
+  width: 1000px;
+  margin-left: -241px;  
+}
+
+.con-name{
+  width: 440px;
+  height: 54px;
+  font-size: 20px;
+  border: solid 3px;
+  border-radius: 17px;
+}
+
+
 ::selection {
   background: #7a6ad8;
   color: #fdfafa;
